--- a/dokumentasi.html
+++ b/dokumentasi.html
@@ -117,48 +117,114 @@
         <button class="btn btn-default filter-button" data-filter="3">BACTH 3</button>
         <button class="btn btn-default filter-button" data-filter="4">BACTH 4</button>
         <button class="btn btn-default filter-button" data-filter="5">BACTH 5</button>
+        <button class="btn btn-default filter-button" data-filter="6">BACTH 6</button>
+        <button class="btn btn-default filter-button" data-filter="7">BACTH 7</button>
 
       </div>
       <br/>
 
+
+
       <!-- BATCH 1 -->
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="assets/img/dokumentasi/2024-2025/batch1/1.JPG" class="img-responsive">
+        <img src="assets/img/dokumentasi/2023-2024/batch1/1.png" class="img-responsive">
       </div>
 
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="assets/img/dokumentasi/2024-2025/batch1/2.JPG" class="img-responsive">
+        <img src="assets/img/dokumentasi/2023-2024/batch1/2.png" class="img-responsive">
       </div>
 
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="assets/img/dokumentasi/2024-2025/batch1/3.JPG" class="img-responsive">
+        <img src="assets/img/dokumentasi/2023-2024/batch1/3.png" class="img-responsive">
       </div>
 
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 1">
-        <img src="assets/img/dokumentasi/2024-2025/batch1/4.JPG" class="img-responsive">
+        <img src="assets/img/dokumentasi/2023-2024/batch1/4.png" class="img-responsive">
       </div>
 
 
 
       <!-- BATCH 2 -->
       <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2023-2024/batch2/1.png" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2023-2024/batch2/3.png" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2023-2024/batch2/4.png" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+        <img src="assets/img/dokumentasi/2023-2024/batch2/5.png" class="img-responsive">
+      </div>
+
+
+
+      <!-- BATCH 4 -->
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 4">
+        <img src="assets/img/dokumentasi/2024-2025/batch1/1.JPG" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 4">
+        <img src="assets/img/dokumentasi/2024-2025/batch1/2.JPG" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 4">
+        <img src="assets/img/dokumentasi/2024-2025/batch1/3.JPG" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 4">
+        <img src="assets/img/dokumentasi/2024-2025/batch1/4.JPG" class="img-responsive">
+      </div>
+
+
+
+      <!-- BATCH 5 -->
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 5">
         <img src="assets/img/dokumentasi/2024-2025/batch2/1.JPG" class="img-responsive">
       </div>
 
-      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 5">
         <img src="assets/img/dokumentasi/2024-2025/batch2/2.JPG" class="img-responsive">
       </div>
 
-      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 5">
         <img src="assets/img/dokumentasi/2024-2025/batch2/3.JPG" class="img-responsive">
       </div>
 
-      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 5">
         <img src="assets/img/dokumentasi/2024-2025/batch2/4.JPG" class="img-responsive">
       </div>
-      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 2">
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 5">
         <img src="assets/img/dokumentasi/2024-2025/batch2/5.JPG" class="img-responsive">
       </div>
+
+
+      
+      <!-- BATH 6 -->
+        <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 6">
+        <img src="assets/img/dokumentasi/2024-2025/batch3/1.jpg" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 6">
+        <img src="assets/img/dokumentasi/2024-2025/batch3/2.jpg" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 6">
+        <img src="assets/img/dokumentasi/2024-2025/batch3/3.jpg" class="img-responsive">
+      </div>
+
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 6">
+        <img src="assets/img/dokumentasi/2024-2025/batch3/4.jpg" class="img-responsive">
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter 6">
+        <img src="assets/img/dokumentasi/2024-2025/batch3/5.jpg" class="img-responsive">
+      </div>
+
+
     </div>
   </div>
   </section>
@@ -183,7 +249,7 @@
           <button rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
             data-original-title="Like us">
             <a href="https://www.facebook.com/coconutcomputer">
-              <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+              <span class="btn-inner--icon"><i class="fa fa-facebook" style="color: white;"></i></span>
             </a>
           </button>
           <button rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
