--- a/formulir.html
+++ b/formulir.html
@@ -106,9 +106,8 @@
                         <button type="button" class="btn btn-sm btn-success btn-tooltip" data-toggle="tooltip"
                             data-placement="top" title="" data-container="body" data-animation="true"
                             data-original-title="Pendaftaran Berakhir pada Sabtu, 3 February 2024">COCONUT OPEN CLASS
-                            BATCH 1</button>
-                        <h3 class=" text-white"><span class="text-white display-4">Introduction to Sveltekit: The
-                                frontend framework of the future</span></h3>
+                            BATCH 7</button>
+                        <h3 class=" text-white"><span class="text-white display-4">From Nothing to Coder : Practical HTML & CSS</span></h3>
                         <!-- <small class="text-uppercase font-weight-bold">Informasi!</small> -->
                     </div>
 
@@ -137,37 +136,33 @@
                                 <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel"
                                     aria-labelledby="tabs-icons-text-1-tab">
                                     <p class="description"><b>Tipe :</b> Open Class<br>
-                                        <b>Pemateri :</b> Nurman Awaluddin <br>
-                                        <b>Moderator :</b> Musdalipa<br>
-                                        <b>Materi :</b> Sveltekit <br>
+                                        <b>Pemateri 1 :</b> Mustika  <br>
+                                        <b>Pemateri 2 :</b> Windu Yoga Nugraha  <br>
+                                        <b>Moderator :</b> Andika Rizky Ramadhan<br>
+                                        <b>Materi :</b> Frontend <br>
                                         <b>Tempat :</b> IndigoHub Makassar<br>
                                     </p>
 
-                                    <p class="description"><b>Deskripsi:</b> Bayangkan kamu ingin membangun aplikasi web
-                                        yang cepat, interaktif, dan ringan. Svelte adalah framework JavaScript modern
-                                        yang mempermudah proses pengembangan dengan sintaks yang sederhana dan efisien.
-                                        Berbeda dengan framework lainnya, Svelte melakukan kompilasi kode pada waktu
-                                        build, bukan saat runtime, sehingga menghasilkan aplikasi yang lebih cepat dan
-                                        performa lebih baik.
-                                        <br><br>
-                                        Di Coconut Open Class ini, kami akan membahas pengenalan Svelte, konsep-konsep
-                                        dasar pengembangannya, dan bagaimana memulai proyek dengan Svelte. Kamu akan
-                                        belajar cara membuat komponen, mengelola state, dan membangun aplikasi web yang
-                                        responsif dan ringan.
-                                        <br> <br>
-                                        Jangan lewatkan kesempatan ini untuk memperdalam pengetahuan dan menguasai
-                                        teknologi Svelte. Daftarkan diri kamu sekarang dan mulai perjalananmu dalam
-                                        pengembangan web modern!
+                                    <p class="description"><b>Tujuan:</b>
+                                        <ol>
+                                            <li>Memberikan pemahaman dasar kepada peserta mengenai struktur dan sintaks HTML serta prinsip dasar desain menggunakan CSS.</li>
+                                            <li>Membekali peserta dengan keterampilan yang praktis dalam membangun halaman web statis secara langsung melalui sesi praktik (live demo).</li>
+                                            <li>Mengenalkan penggunaan Git sebagai alat manajemen versi (version control system) dalam proses pengembangan web.</li>
+                                            <li>Mengajarkan cara melakukan deployment website menggunakan platform Vercel agar peserta dapat mempublikasikan hasil proyek mereka secara online.</li>
+
+
+
+                                        </ol>
+
                                     </p>
 
 
                                     <button type="button" class="btn btn-outline-default"><i
                                             class="ni ni-calendar-grid-58 mr-2"></i> <b>Jum'at,
-                                            11 Oktober 2024</b> 13:00 WITA - Selesai</button>
+                                            13 Juni 2025</b> 13:30 WITA - Selesai</button>
                                     <br><br>
                                     <span>Informasi lebih lanjut Hubungi <a
-                                            href="https://api.whatsapp.com/send/?phone=62895605378736&text=assalamualaikum&type=phone_number&app_absent=0">Fikri
-                                            Haekal</a></span>
+                                            href="https://api.whatsapp.com/send/?phone=6285757106358&text=assalamualaikum&type=phone_number&app_absent=0">Indal Awalaikal</a></span>
                                 </div>
                                 <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel"
                                     aria-labelledby="tabs-icons-text-2-tab">
@@ -190,17 +185,17 @@
 
                                     <p class="description">
                                         <b>Pendaftaran Gratis</b><br>
-                                        1. Ilmu Bermanfaat <br>
+                                        1. E-Sertifikat  <br>
                                         2. Relasi <br>
+                                        3. Ilmu Bermanfaat
                                     </p>
 
-                                    <p class="description">
-                                        <b>Pendaftaran Berbayar</b><br>
-                                        1. Sertifikat <br>
+                                    <!-- <p class="description">
+                                        <b>Pendaftaran Berbayar</b>
                                         2. Modul Pembelajaran <br>
                                         3. Ilmu Bermanfaat <br>
                                         4. Relasi <br>
-                                    </p>
+                                    </p> -->
                                 </div>
                             </div>
                         </div>
@@ -258,7 +253,7 @@
                                     </div>
 
                                     <!-- Radio Button Apakah Pernah Menggunakan JS Framework -->
-                                    <div class="form-group mb-3">
+                                    <!-- <div class="form-group mb-3">
                                         <label class="text-muted font-weight">Apakah pernah menggunakan framework
                                             JavaScript sebelumnya?</label>
                                         <div class="form-check form-check-inline">
@@ -271,7 +266,7 @@
                                                 id="jsFrameworkTidak" value="tidak" onchange="sembunyikanFramework()">
                                             <label class="form-check-label" for="jsFrameworkTidak">Tidak</label>
                                         </div>
-                                    </div>
+                                    </div> -->
 
                                     <!-- Pilihan Framework (Tersembunyi Awalnya) -->
                                     <div class="form-group mb-3" id="frameworkForm" style="display:none;">
@@ -291,22 +286,20 @@
                                     <!-- Info Instagram -->
                                     <br>
                                     <small class="text-uppercase text-muted font-weight">
-                                        Pendaftaran kegiatan ini benar-benar gratis! Namun, jika ingin menerima
-                                        sertifikat dan modul pembelajaran eksklusif, cukup dengan membayar Rp15.000 ke
-                                        rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari dan mengunggah bukti
-                                        transfer.
+                                        Pendaftaran kegiatan ini benar-benar gratis! Namun, kalian tetap akan mendapatkan E-sertifikat, relasi pertemanan yang luas, pengalaman berharga, dan tentunya ilmu yang bermanfaat dari pemateri kami.
+                                        Cukup follow Instagram @coconutdotorg dan lampirkan bukti screenshot-nya saat mendaftar untuk bergabung!
+
                                         <br><br>
-                                        Mudah, bukan? Ayo gabung dan nikmati manfaatnya bersama kami!
+                                        Mudah, bukan? Ayo gabung dan nikmati semua manfaatnya bersama kami!
                                     </small>
 
                                     <!-- Upload Bukti Follow -->
                                     <div class="form-group mb-3">
                                         <div class="input-group input-group-alternative">
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="buktitf" name="file"
+                                                <input type="file" class="custom-file-input" id="buktifollow" name="file"
                                                     accept=".jpeg, .jpg, .png">
-                                                <label class="custom-file-label" for="gambarInput">Upload Bukti
-                                                    Transfer</label>
+                                                <label class="custom-file-label" for="gambarInput">Upload bukti follow instagram</label>
                                             </div>
                                         </div>
                                     </div>
@@ -350,7 +343,7 @@
                     <button rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
                         data-original-title="Like us">
                         <a href="https://www.facebook.com/coconutcomputer">
-                            <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+                            <span class="btn-inner--icon"><i class="fa fa-facebook" style="color: white;"></i></span>
                         </a>
                     </button>
                     <button rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
