--- a/login.html
+++ b/login.html
@@ -144,7 +144,7 @@
                     <button rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip"
                         data-original-title="Like us">
                         <a href="https://www.facebook.com/coconutcomputer">
-                            <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+                            <span class="btn-inner--icon"><i class="fa fa-facebook" style="color: white;"></i></span>
                         </a>
                     </button>
                     <button rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip"
