--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>
-    COCONUT OPEN CLASS
-  </title>
-  <!--     Fonts and icons     -->
-  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet"> -->
-  <!-- <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"> -->
+  <title>COCONUT OPEN CLASS</title>
   <!-- Nucleo Icons -->
   <link href="./assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href="./assets/css/nucleo-svg.css" rel="stylesheet" />
@@ -30,10 +25,6 @@
       <a class="navbar-brand mr-lg-5" href="./index.html">
         <img src="./assets/img/logococonut.png">
       </a>
-      <!-- <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
-        title="Tooltip on top" data-container="body" data-animation="true"><a href=""
-          class="text-secondary">Dokumentasi</a></button> -->
-
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
         aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -48,7 +39,6 @@
             </div>
           </div>
         </div>
-
         <ul class="navbar-nav align-items-lg-center ml-lg-auto">
           <li class="nav-item">
             <a class="nav-link nav-link-icon" href="https://www.facebook.com/coconutcomputer" data-toggle="tooltip"
@@ -71,25 +61,6 @@
               <span class="nav-link-inner--text d-lg-none">youtube</span>
             </a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link nav-link-icon" href="https://github.com/creativetimofficial/argon-design-system" data-toggle="tooltip" title="Star us on Github">
-              <i class="fa fa-github"></i>
-              <span class="nav-link-inner--text d-lg-none">Github</span>
-            </a>
-          </li> -->
-          <!-- <li class="nav-item">
-            <a class="btn btn-outline-primary" href="https://www.creative-tim.com/builder/argon">
-              <span class="nav-link-inner--text">Online Builder</span>
-            </a>
-          </li>
-          <li class="nav-item d-none d-lg-block">
-            <a href="https://www.creative-tim.com/product/argon-design-system-pro?ref=ads-upgrade-pro" class="btn btn-primary btn-icon">
-              <span class="btn-inner--icon">
-                <i class="fa fa-shopping-cart"></i>
-              </span>
-              <span class="nav-link-inner--text">Upgrade to PRO</span>
-            </a>
-          </li> -->
         </ul>
       </div>
     </div>
@@ -97,45 +68,28 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="section section-hero section-shaped">
-      <div class="shape shape-style-1 shape-primary">
-        <!-- <span class="span-150"></span>
-        <span class="span-50"></span>
-        <span class="span-50"></span>
-        <span class="span-75"></span>
-        <span class="span-100"></span>
-        <span class="span-75"></span>
-        <span class="span-50"></span>
-        <span class="span-100"></span>
-        <span class="span-50"></span>
-        <span class="span-100"></span> -->
-      </div>
+      <div class="shape shape-style-1 shape-primary"></div>
       <div class="page-header">
-        <div class="container shape-container d-flex align-items-center py-lg">
-          <div class="col px-0">
-            <div class="row align-items-center justify-content-center">
-              <div class="col-lg-6 text-center">
-                <img src="./assets/img/logo.png" style="width: 120px;" class="img-fluid">
-                <p class="display-4 text-white">COCONUT OPEN CLASS BATCH 1<br><br><sup>Introduction to Sveltekit: The frontend framework of the future</sup></p>
-                <div class="btn-wrapper mt-2">
-                  <a href="dokumentasi.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
-                    <span class="btn-inner--icon"><i class="ni ni-image"></i></span>
-                    <span class="btn-inner--text">Lihat Dokumentasi</span>
-                  </a>
-
-                  <a href="./formulir.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
-                    <span class="btn-inner--icon"><i class="ni ni-single-copy-04"></i></span>
-                    <span class="btn-inner--text">Daftar Sekarang</span>
-                  </a>
-
-                  <!-- <a href="https://github.com/creativetimofficial/argon-design-system" class="btn btn-lg btn-github btn-icon mb-3 mb-sm-0">
-                    <span class="btn-inner--icon"><i class="fa fa-github"></i></span>
-                    <span class="btn-inner--text"><span class="text-warning">Star us</span> on Github</span>
-                  </a> -->
-                </div>
-                <div class="mt-5">
-                  <small class="font-weight-bold mb-0 mr-2 text-white">Made by</small>
-                  <img src="./assets/img/logococonut.png" style="height: 28px;">
-                </div>
+        <div class="container shape-container py-lg">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-lg-6 text-center">
+              <img src="./assets/img/logo.png" style="width: 100px; margin-bottom: 1rem;" class="img-fluid">
+              <h1 class="display-4 text-white">COCONUT OPEN CLASS BATCH 7 <br><br>
+                <sup class="lead">From Nothing to Coder: Practical HTML & CSS</sup>
+              </h1>
+              <div class="btn-wrapper mt-3">
+                <a href="dokumentasi.html" class="btn btn-white btn-icon mb-3 mb-sm-0">
+                  <span class="btn-inner--icon"><i class="ni ni-image"></i></span>
+                  <span class="btn-inner--text">Lihat Dokumentasi</span>
+                </a>
+                <a href="./formulir.html" class="btn btn-white btn-icon mb-3 mb-sm-0">
+                  <span class="btn-inner--icon"><i class="ni ni-single-copy-04"></i></span>
+                  <span class="btn-inner--text">Daftar Sekarang</span>
+                </a>
+              </div>
+              <div class="mt-4">
+                <small class="text-white font-weight-bold mb-0 mr-2">Made by</small>
+                <img src="./assets/img/logococonut.png" style="height: 24px;">
               </div>
             </div>
           </div>
@@ -148,113 +102,81 @@
         </svg>
       </div>
     </div>
-    <!-- <div class="container">
-      <h2 class="mt-lg mb-5">
-        <span>BPH COCONUT Computer Club</span>
-      </h2>
-      <div class="row" id="img-row">
-
-
-      </div>
-    </div> -->
-    <!-- <div class="section" style="background-image: url('./assets/img/ill/1.svg');">
-      <div class="container py-md">
-        <div class="row justify-content-between align-items-center">
-          <div class="col-lg-6 mb-lg-auto">
-            <div class="rounded overflow-hidden transform-perspective-left">
-              <div id="carousel_example" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel_example" data-slide-to="0" class=""></li>
-                  <li data-target="#carousel_example" data-slide-to="1" class=""></li>
-                  <li data-target="#carousel_example" data-slide-to="2" class="active"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item">
-                    <img class="img-fluid" src="./assets/img/panitia/pro1.jpg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="img-fluid" src="./assets/img/panitia/pro2.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item active">
-                    <img class="img-fluid" src="./assets/img/panitia/pro3.webp" alt="Third slide">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carousel_example" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel_example" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-            </div>
+    <div class="container container-lg" style="padding: 2rem;">
+      <div class="row">
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Landing Page">
+              <img src="./assets/img/coc 2024-2025/Webinar2025Promt.jpeg" class="card-img">
+            </a>
           </div>
-          <div class="col-lg-5 mb-5 mb-lg-0">
-            <h1 class="font-weight-light">Bootstrap carousel</h1>
-            <p class="lead mt-4">Argon Design System comes with four pre-built pages to help you get started faster.
-              You
-              can change the text and images and you're good to go.</p>
-            <a href="https://demos.creative-tim.com/argon-design-system/docs/components/carousel.html"
-              class="btn btn-white mt-4">See all components</a>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2024-2025/Webinar2025.jpg" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2024-2025/Coc3.jpg" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2024-2025/Coc2.jpg" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2024-2025/Coc1.jpg" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2023-2024/coc4.jpg" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2023-2024/coc3.png" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2023-2024/coc2.png" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2023-2024/seminar1.png" class="card-img">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 mb-5 mb-md-5">
+          <div class="card card-lift--hover shadow border-0">
+            <a href="#" title="Profile Page">
+              <img src="./assets/img/coc 2023-2024/coc1.png" class="card-img">
+            </a>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <footer class="footer has-cards">
-      <div class="container container-lg">
-        <div class="row">
-          <div class="col-md-6 mb-5 mb-md-5">
-            <div class="card card-lift--hover shadow border-0">
-              <a href="#" title="Landing Page">
-                <img src="./assets/img/coc 2023-2024/coc1.png" class="card-img">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 mb-5 mb-lg-0">
-            <div class="card card-lift--hover shadow border-0">
-              <a href="#" title="Profile Page">
-                <img src="./assets/img/coc 2023-2024/seminar1.png" class="card-img">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 mb-5 mb-lg-0">
-            <div class="card card-lift--hover shadow border-0">
-              <a href="#" title="Profile Page">
-                <img src="./assets/img/coc 2023-2024/coc2.png" class="card-img">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 mb-5 mb-lg-0">
-            <div class="card card-lift--hover shadow border-0">
-              <a href="#" title="Profile Page">
-                <img src="./assets/img/coc 2023-2024/coc3.png" class="card-img">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 mt-5 mb-lg-0">
-            <div class="card card-lift--hover shadow border-0">
-              <a href="#" title="Profile Page">
-                <img src="./assets/img/coc 2023-2024/coc4.jpg" class="card-img">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 mt-5 mb-lg-0">
-            <div class="card card-lift--hover shadow border-0">
-              <a href="#" title="Profile Page">
-                <img src="./assets/img/coc 2024-2025/Coc1.jpg" class="card-img">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 mt-5 mb-lg-0">
-            <div class="card card-lift--hover shadow border-0">
-              <a href="#" title="Profile Page">
-                <img src="./assets/img/coc 2024-2025/Coc2.jpg" class="card-img">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="container">
         <div class="row row-grid align-items-center my-md">
           <div class="col-lg-6">
@@ -273,7 +195,7 @@
             <button rel="nofollow"
               class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip" data-original-title="Like us">
               <a href="https://www.facebook.com/coconutcomputer">
-                <span class="btn-inner--icon"><i class="fab fa-facebook" style="color: white;"></i></span>
+                <span class="btn-inner--icon"><i class="fa fa-facebook" style="color: white;"></i></span>
               </a>
             </button>
             <button rel="nofollow"
@@ -289,7 +211,7 @@
         <div class="row align-items-center justify-content-md-between">
           <div class="col-md-6">
             <div class="copyright">
-              &copy; 2024 <a href="https://coconut.or.id">COCONUT Computer Club</a>.
+              © 2024 <a href="https://coconut.or.id">COCONUT Computer Club</a>.
             </div>
           </div>
           <div class="col-md-6">
@@ -305,33 +227,27 @@
         </div>
       </div>
     </footer>
-</body>
-<!--   Core JS Files   -->
-<script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
-<script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
-<script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-<script src="./assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-<script src="./assets/js/plugins/bootstrap-switch.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-<script src="./assets/js/plugins/moment.min.js"></script>
-<script src="./assets/js/plugins/datetimepicker.js" type="text/javascript"></script>
-<script src="./assets/js/plugins/bootstrap-datepicker.min.js"></script>
-<!-- Control Center for Argon UI Kit: parallax effects, scripts for the example pages etc -->
-<!--  Google Maps Plugin    -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
-<script src="./assets/js/argon-design-system.min.js?v=1.2.2" type="text/javascript"></script>
-<script src="assets/js/script.js"></script>
-<script>
-  function scrollToDownload() {
-
-    if ($('.section-download').length != 0) {
-      $("html, body").animate({
-        scrollTop: $('.section-download').offset().top
-      }, 1000);
+  </div>
+  <!-- Core JS Files -->
+  <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+  <script src="./assets/js/plugins/bootstrap-switch.js"></script>
+  <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/moment.min.js"></script>
+  <script src="./assets/js/plugins/datetimepicker.js" type="text/javascript"></script>
+  <script src="./assets/js/plugins/bootstrap-datepicker.min.js"></script>
+  <script src="./assets/js/argon-design-system.min.js?v=1.2.2" type="text/javascript"></script>
+  <script src="assets/js/script.js"></script>
+  <script>
+    function scrollToDownload() {
+      if ($('.section-download').length != 0) {
+        $("html, body").animate({
+          scrollTop: $('.section-download').offset().top
+        }, 1000);
+      }
     }
-  }
-</script>
-<!-- <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script> -->
+  </script>
+</body>
 </html>
